--- a/templates/main.html
+++ b/templates/main.html
@@ -2,6 +2,20 @@
 {% block content %}
     <h2>Welcome to the Flask Blog!</h2>
     <p><a href="{{ url_for('logout') }}">Log out</a></p>
+    <h3>Add a new post:</h3>
+    <form class="add" action="{{ url_for('add') }}" method="post">
+        <div>
+            <label>Title:</label>
+            <input type="text" name="title" value="">
+        </div>
+        <div>
+            <label>Post:</label>
+            <textarea name="post" rows="5" cols="40"></textarea>
+        </div>
+        <div>
+            <input class="button" type="submit" name="" value="Save">
+        </div>
+    </form>
     <br/>
     <br/>
     <h3>Posts:</h3>
