--- a/templates/template.html
+++ b/templates/template.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>Welcome, friends!</title>
+        <link rel="stylesheet"
+            href="{{ url_for('static', filename='css/styles.css') }}" />
     </head>
     <body>
         <div class="container">
